--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -9,6 +9,12 @@
       "tablet",
       "2in1"
     ],
+    "requestPermissions": [
+      {
+        "name" : "ohos.permission.INTERNET",
+        "reason" : "$string:ability_desc"
+      }
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
